--- a/package.json
+++ b/package.json
@@ -6,20 +6,47 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\""
   },
   "dependencies": {
     "@types/node": "20.5.2",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@uiw/react-prismjs": "^1.3.6",
     "autoprefixer": "10.4.15",
-    "eslint": "8.47.0",
+    "axios": "^1.5.0",
+    "classnames": "^2.3.2",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.1",
+    "github-markdown-css": "^5.2.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
+    "prism-react-renderer": "^2.0.6",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-latex": "^2.0.0",
+    "react-latex-next": "^2.2.0",
+    "react-markdown": "^8.0.7",
+    "react-query": "^3.39.3",
+    "react-syntax-highlighter": "^15.5.0",
+    "react-virtualized": "^9.22.5",
+    "react-virtuoso": "^4.5.1",
+    "react-window": "^1.8.9",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0",
+    "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.47.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
